fixed btn width overflow

--- a/style.css
+++ b/style.css
@@ -1579,7 +1579,7 @@ pre, pre code {
     font-weight: bold;
     font-size: 22px;
     color: #155724;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0;
     text-decoration: none;
 }
 .display-posts-listing .listing-item .title:hover {
@@ -1587,13 +1587,39 @@ pre, pre code {
 }
 .display-posts-listing .listing-item .date {
     display: block;
-    position:  absolute;
-    top: 1.2rem;
-    right: 1.25rem;
+    position: static;
+}
+@media (min-width: 992px) {
+    .display-posts-listing .listing-item .date {
+        position:  absolute;
+        top: 1.2rem;
+        right: 1.25rem;
+    }
 }
 .display-posts-listing .listing-item .excerpt-dash {
     display: none;
 }
 .display-posts-listing .listing-item .excerpt {
     display: block;
+}
+
+/* KEEP TEACHING TEMPLATE */
+/*
+.keep-teaching .sidebar-widget.sticky-top {
+    position: static;
+    top: unset;
+    z-index: auto;
+}
+*/
+.keep-teaching .btn{
+    text-align: left;
+    white-space: pre-line;
+}
+.keep-teaching .btn:focus {
+    color: #fff;
+}
+.keep-teaching figcaption {
+    font-size: 80%;
+    font-style: italic;
+    margin-top: 0.75rem;
 }
